fix onTabComplete()